<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stickers for Hangouts</string>
    <string name="action_settings">Settings</string>
    <string name="select_sticker">Pick a sticker</string>
    <string name="about">About</string>
    <string name="about_text">&lt;b&gt;App created by Quinny898&lt;/b&gt;&lt;br&gt;&lt;br&gt;Stickers from Google Hangouts iOS app and Google+</string>
    <string name="animate_preview">Animate Preview</string>
    <string name="animate_failed">Animated previews failed to load, your sticker will still be animated though!</string>
    <string name="info">&lt;b&gt;How to use&lt;/b&gt;&lt;br&gt;Open Hangouts, and select the chat you want the sticker for&lt;br&gt;Tap the attach button (the paperclip) and select &quot;Attach Photos&quot;&lt;br&gt;Select &quot;Pick a sticker&quot; from the options&lt;br&gt;Choose the sticker you want&lt;br&gt;Enter a caption and send!</string>
    <string name="youtube_guide">How to guide on YouTube</string>
    <string name="hide">Hide from App Drawer</string>
    <string name="how_to_show">You can show it again from the sticker add screen, under the options menu</string>
    <string name="show_app">Show in app drawer</string>
    <string name="reboot">A reboot may be required for these changes to take place</string>
    <string name="stickers_xposed">Add an &quot;Add sticker&quot; option to Hangouts</string>
    <string name="add_sticker">Attach sticker</string>
    <string name="long_press">Long click for a preview</string>
    <string name="close">Close</string>
    <string name="use">Use</string>
    <string name="stickers">Stickers</string>
    <string name="extras">Extras</string>
    <string name="ponies">Ponies</string>
    <string name="show_ponies">Show Ponies Tab</string>
    <string name="show_ponies_info">Show ponies tab on the sticker picker</string>
    <string name="settings">Settings</string>
    <string name="no_stickers">No Stickers Found!</string>
    <string name="add_a_sticker">Add a Sticker</string>
    <string name="your_stickers">Your Stickers</string>
    <string name="missing_images">Missing Images</string>
    <string name="missing_images_info">Some images that you have used in the past have been deleted or cannot be accessed. Would you like to clear them from the list?</string>
    <string name="deleting">Deleting…</string>
    <string name="info_dialog">Info</string>
    <string name="missing_images_info_title">Missing Images:</string>
    <string name="loading">Loading…</string>
    <string name="already_image">You already have this image or one with the same name!</string>
    <string name="delete">Delete</string>
    <string name="clear_all">Clear All</string>
    <string name="toast_splash">One in four chance of seeing a &quot;splash&quot; ad. Tap close if you want after it\'s loaded!</string>
    <string name="toast_ad">One in four chance of seeing a boring ad. Tap close if you want!</string>
    <string name="error_download">Error loading image, make sure it is not a cloud stored image such as from Google+ photos</string>
    <string name="send">Send</string>
    <string name="add_drawing">Add Drawing</string>
    <string name="disable_toast">Disable Toast</string>
    <string name="disable_toast_info">Disable the toast that accompanies the ads</string>
    <string name="pen_size">Pen Size</string>
    <string name="copying_file">Loading Image...</string>

</resources>
