<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_show"
        android:showAsAction="never"
        android:title="@string/show_app"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/add_a_sticker"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all">
    </item>

</menu>